--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "node-schedule": "^2.1.0",
     "pg-promise": "^10.15.4",
     "twitter": "^1.7.1"
   },
