--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs-extra": "^11.1.0",
     "glob": "^8.0.3",
     "http-errors": "~1.6.3",
+    "image-hash": "^5.3.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "node-schedule": "^2.1.0",
