--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,4 +10,5 @@ jobs:
         with:
           node-version: '16'
       - run: npm install
+      - run: npm install -g nodemon
       - run: npm start
