--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "start": "sudo pm2 start ./bin/www --name loker-it-backend"
   },
   "dependencies": {
     "axios": "^1.2.0",
