--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,13 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+orbs:
+  node: circleci/node@x.y
 jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:16.18.0
+      - image: circleci/node:16.13.1
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
